# etf-dashboard

./: .gitignore  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
packaging/: etf_dashboard_gui_onefile.spec
src/etf_dashboard/: __init__.py  __main__.py  charting.py  cli.py  data_yahoo.py  gui_launcher.py  gui_streamlit.py  indicators.py  laowang.py  report_md.py  rules.py
src/etf_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_indicators.py  test_laowang.py  test_rules.py  test_san_sheng_wu_nai.py  test_winrate_breakdown.py
